image & scrollbar summery add and the finally solve few bug!

--- a/style.css
+++ b/style.css
@@ -282,8 +282,15 @@ button:focus{
 	display: flex;
 	align-items: center;
 }
-.heor-img img {
-	width: 100%;
+.hero-img img {
+	display: flex;
+	width: 75%;
+}
+.img{ /*Yeamin added*/
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 }
 .hero-caption-full h5 {
 	color: #ffbd39;
@@ -544,7 +551,8 @@ button:focus{
 */
 .resume-item-box {
 	width: 100%;
-	height: 100%;
+	height: 50%;
+	overflow: auto;
 	padding: 30px 20px;
 	text-align: left;
 	box-shadow: 0px 2px 5px #4d4b4b;
